fear: сделать секцию elements

--- a/pages/index.css
+++ b/pages/index.css
@@ -11,3 +11,14 @@
 @import url(../blocks/profile/__intro/profile__intro.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
+@import url(../blocks/profile/__container/profile__container.css);
+@import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile/__plus/profile__plus.css);
+/* Elements */
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/elements/__container/elements__container.css);
+@import url(../blocks/element/element.css);
+@import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__img/element__img.css);
+@import url(../blocks/element/__heading/element__heading.css);
+@import url(../blocks/element/__group/element__group.css);
