--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -5,4 +5,5 @@
     background-image: url(../../../images/svg/pencil.svg);
     background-repeat: no-repeat;
     background-position: center;
+    margin: 0 0 0 18px;
 }
