--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,4 +3,5 @@
     margin: auto;
     background-color: black;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
+    position: relative;
 }
