--- a/blocks/elements/__container/elements__container.css
+++ b/blocks/elements/__container/elements__container.css
@@ -7,5 +7,10 @@
     justify-content: center;
     row-gap: 20px;
     column-gap: 17px;
+}
 
+@media screen and (max-width:696px) {
+    .elements__container {
+        column-gap: 19px;
+    }
 }
