--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,3 +2,15 @@
     padding: 45px 0;
     border-bottom: solid #545454 1px;
 }
+
+@media screen and (max-width:880px) {
+    .header {
+        margin: 0 19px 0;
+    }
+}
+
+@media screen and (max-width:696px) {
+    .header {
+        padding: 30px 0;
+    }
+}
