--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -3,3 +3,9 @@
     width: 120px;
     height: 120px;
 }
+
+@media screen and (max-width:696px) {
+    .profile__avatar {
+        margin: 38px 0 0 0;
+    }
+}
