--- a/blocks/profile/__intro/profile__intro.css
+++ b/blocks/profile/__intro/profile__intro.css
@@ -3,3 +3,10 @@
     flex-direction: column;
     margin: 0 0 0 30px;
 }
+
+@media screen and (max-width:696px) {
+    .profile__intro {
+        margin: 0;
+        text-align: center;
+    }
+}
