--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -2,4 +2,19 @@
     margin: 36px 0 0;
     color: white;
     display: flex;
+    align-items: center;
+}
+
+@media screen and (max-width:880px) {
+    .profile {
+        margin: 36px 19px 0;
+    }
+}
+
+@media screen and (max-width:696px) {
+    .profile {
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+    }
 }
