--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,8 +1,11 @@
 .popup {
-    position: absolute;
+    position: fixed;
+    display: none;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
     background-color: rgba(0, 0, 0, 0.5);
 }
