fix: Исправление ошибок валидации

--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -19,6 +19,6 @@
 @media screen and (max-width:696px) {
     .profile__add-button {
         width: 282px;
-        margin: auto
+        margin: auto;
     }
 }
