--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,4 +1,14 @@
 .footer__copyright {
     margin: 0;
     color: #545454;
+    font-size: 18px;
+    line-height: 21px;
+    font-weight: 400;
+}
+
+@media screen and (max-width:696px) {
+    .footer__copyright {
+        font-size: 14px;
+        line-height: 16px;
+    }
 }
