--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
-    padding: 45px 0;
-    border-bottom: solid #545454 1px;
+    padding: 45px 0 41px;
+    border-bottom: solid rgba(84, 84, 84, 0.7) 1px;
 }
 
 @media screen and (max-width:880px) {
@@ -12,5 +12,6 @@
 @media screen and (max-width:696px) {
     .header {
         padding: 30px 0;
+        margin: 0;
     }
 }
