--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -2,8 +2,20 @@
     width: 32px;
     height: 32px;
     position: absolute;
-    top: -10%;
-    left: 104%;
+    top: -12%;
+    right: -9%;
+    cursor: pointer;
+    background-image: url(../../../images/svg/Close-Icon.svg);
+    background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, 0);
+    background-position: center;
+    background-size: contain;
+    transition: opacity 1s ease;
+    opacity: 1;
+}
+
+.popup__close:hover {
+    opacity: 80%;
     cursor: pointer;
 }
 
@@ -11,6 +23,6 @@
     .popup__close {
         width: 20px;
         height: 20px;
-        left: 94%;
+        right: 0;
     }
 }
