--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,10 +7,11 @@
     background-position: center;
     margin: 0 0 0 18px;
     transition: opacity 1s ease;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .profile__edit-button:hover {
-    opacity: 50%;
+    opacity: 80%;
     cursor: pointer;
 }
 
@@ -19,5 +20,6 @@
         margin: 0 0 0 10px;
         width: 18px;
         height: 18px;
+        background-size: 7.5px;
     }
 }
