--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,11 +1,18 @@
 .profile__subtitle {
     font-size: 18px;
     margin: 16px 0 0;
+    line-height: 21px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 336px;
 }
 
 @media screen and (max-width:696px) {
     .profile__subtitle {
         margin: 0 0 36px 0;
         font-size: 14px;
+        line-height: 17px;
+        max-width: 282px;
     }
 }
