--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,11 +1,11 @@
 .popup__form {
     border: 0;
     border-bottom: solid rgba(0, 0, 0, .2) 1px;
-    margin: 0 0 30px 0;
+    margin: 0 0 23px 0;
     width: 358px;
-    height: 27px;
+    height: 14px;
     font-size: 14px;
-    padding: 0 0 12px 0;
+    padding: 0 0 13px 0;
 }
 
 .popup__form:last-of-type {
@@ -15,5 +15,10 @@
 @media screen and (max-width:696px) {
     .popup__form {
         width: 238px;
+        margin: 0 0 26px 0;
+    }
+
+    .popup__form:last-of-type {
+        margin-bottom: 43px;
     }
 }
