--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,5 +1,5 @@
 .profile {
-    margin: 36px 0 0;
+    margin: 42px 0 0;
     color: white;
     display: flex;
     align-items: center;
@@ -7,14 +7,13 @@
 
 @media screen and (max-width:880px) {
     .profile {
-        margin: 36px 19px 0;
+        margin: 42px 19px 0;
     }
 }
 
 @media screen and (max-width:696px) {
     .profile {
         flex-direction: column;
-        align-items: center;
-        margin: 0;
+        margin: 42px 0 0 0;
     }
 }
