hotfix: исправить ошибки после ревью

--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -1,6 +1,7 @@
 .profile__container {
     display: flex;
     align-items: center;
+    margin-bottom: 8px;
 }
 
 @media screen and (max-width:696px) {
