--- a/pages/index.css
+++ b/pages/index.css
@@ -21,6 +21,8 @@
 @import url(../blocks/element/__img/element__img.css);
 @import url(../blocks/element/__heading/element__heading.css);
 @import url(../blocks/element/__group/element__group.css);
+@import url(../blocks/element/__trash-can/element__trash-can.css);
+@import url(../blocks/element/__like/_type/_active/element__like_active.css);
 /* Footer */
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -33,3 +35,7 @@
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/_is-open/popup_is-open.css);
+@import url(../blocks/popup/__picture-container/popup__picture-container.css);
+@import url(../blocks/popup/__picture/popup__picture.css);
+@import url(../blocks/popup/__description/popup__description.css);
+@import url(../blocks/popup/__close/_type/_popup-img/popup_close_type_popup-img.css);
