--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -10,7 +10,7 @@
     color: white;
     align-items: center;
     padding: 0;
-    margin: 0 0 37px 0;
+    margin: 31px 0 37px 0;
     font-size: 18px;
     line-height: 21px;
     border: 0;
@@ -23,7 +23,7 @@
 
 @media screen and (max-width:696px) {
     .popup__save-button {
-        margin: 0 0 25px 0;
+        margin: 31px 0 25px 0;
         font-size: 14px;
         line-height: 16px;
         height: 46px;
