--- a/pages/index.css
+++ b/pages/index.css
@@ -39,3 +39,6 @@
 @import url(../blocks/popup/__picture/popup__picture.css);
 @import url(../blocks/popup/__description/popup__description.css);
 @import url(../blocks/popup/__close/_type/_popup-img/popup_close_type_popup-img.css);
+@import url(../blocks/popup/__error/popup__error.css);
+@import url(../blocks/popup/__form/_type/popup__form_type_error.css);
+@import url(../blocks/popup/__save-button/_type/_disabled/popup__save-button_type_disabled.css);
