--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,6 +1,7 @@
 .element {
     background-color: white;
     max-width: 282px;
-    max-height: 361px;
     border-radius: 10px;
+    overflow: hidden;
+    position: relative;
 }
