--- a/blocks/popup/__forms/popup__forms.css
+++ b/blocks/popup/__forms/popup__forms.css
@@ -1,5 +1,11 @@
 .popup__forms {
     border: 0;
     padding: 0;
-    margin: 0;
+    margin: 0 36px;
+}
+
+@media screen and (max-width:696px) {
+    .popup__forms {
+        margin: 0 22px;
+    }
 }
