--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,24 +1,28 @@
 .profile__add-button {
     width: 150px;
     height: 50px;
-    border: solid white 1px;
+    border: solid white 2px;
+    border-radius: 2px;
     justify-content: flex-end;
-    margin-left: auto;
     background-image: url(../../../images/svg/plus.svg);
     background-repeat: no-repeat;
     background-position: center;
+    background-color: rgba(0, 0, 0, 0);
+    padding: 0;
+    margin: 0 0 0 auto;
     transition: opacity 1s ease;
     opacity: 1;
 }
 
 .profile__add-button:hover {
-    opacity: 50%;
+    opacity: 60%;
     cursor: pointer;
 }
 
 @media screen and (max-width:696px) {
     .profile__add-button {
         width: 282px;
-        margin: auto
+        margin: auto;
+        background-size: 16px;
     }
 }
