Исправить ошибки после ревью

--- a/blocks/popup/__save-button/_disabled/popup__save-button_disabled.css
+++ b/blocks/popup/__save-button/_disabled/popup__save-button_disabled.css
@@ -1,4 +1,4 @@
-.popup__save-button:disabled {
+.popup__save-button_disabled {
     color: #000000;
     background-color: transparent;
     border: 1px solid #000000;
