--- a/blocks/popup/__error/popup__error.css
+++ b/blocks/popup/__error/popup__error.css
@@ -2,5 +2,6 @@
     color: #FF0000;
     font-size: 12px;
     line-height: 15px;
-    min-height: 12px;
+    min-height: 30px;
+    display: flex;
 }
