featired: Все готово

--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -1,6 +1,7 @@
 .popup__container {
     background-color: white;
     position: relative;
+    width: 100%;
     max-width: 430px;
     border-radius: 10px;
 }
