--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -5,6 +5,7 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 /* Profile */
+@import url(../blocks/profile/__avatar-bg/profile__avatar-bg.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__title/profile__title.css);
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
@@ -22,6 +23,8 @@
 @import url(../blocks/element/__heading/element__heading.css);
 @import url(../blocks/element/__group/element__group.css);
 @import url(../blocks/element/__trash-can/element__trash-can.css);
+@import url(../blocks/element/__like-amount/element__like-amount.css);
+@import url(../blocks/element/__like-group/element__like-group.css);
 @import url(../blocks/element/__like/_type/_active/element__like_active.css);
 /* Footer */
 @import url(../blocks/footer/footer.css);
@@ -34,6 +37,7 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/__delete-btn/popup__delete-btn.css);
 @import url(../blocks/popup/_is-open/popup_is-open.css);
 @import url(../blocks/popup/__picture-container/popup__picture-container.css);
 @import url(../blocks/popup/__picture/popup__picture.css);
